# spots_flask

./: .env.example  .gitignore  LICENSE  README.md  add_to_history.py  convert_mp4.sh  download_urls.py  duplicate_songs_remover.py  pyproject.toml  requirements.txt  spots.py
api/: main.py
app/: __init__.py  domain_resolver.py  downloader.py  media_resolver.py  spotify_playlist_compilation.py  youtube_user_playlist.py
bootstrap/: container.py
clients/: __init__.py  deezer.py  spotify.py  ytdl.py
core/: __init__.py  lyrics_finder.py  pattern_matcher.py  video_converter.py  web_scraper.py  youtube_extractor.py
engine/: __init__.py  file_storage.py  retry.py
integrations/: __init__.py  spotify_user_playlist_modify.py
models/: __init__.py  errors.py  get_spotify_track.py  helper_models.py  media_resource.py  metadata.py  playlist_info.py  process_spotify_link.py  process_youtube_link.py  retrieve_spotify_playlist.py  scrape_lyrics.py  search_provider.py  sentinel.py  spotify_to_youtube.py  spotify_worker.py  youtube_to_spotify.py  yt_likes.py  yt_video_info.py
orchestration/: __init__.py  metadata_orchestrator.py  search_orchestrator.py
scripts/: bootstrap.py  duplicate_songs_remover.py  setup_env.py
server/: __init__.py  download_music.py
services/: __init__.py  add_to_history_service.py  deezer_search_service.py  provider_search_container.py  providers_metadata.py  providers_search.py  spotify_metadata_service.py  spotify_search_service.py  video_to_mp3_service.py  youtube_api_client.py  youtube_matcher.py  youtube_metadata_service.py  ytdlp_client.py  (+1 more)
(+129 files in other folders)
